@@ -23,17 +23,18 @@ questions can be displayed on a single screen.
 </para><para arch="x86">
 
 The graphical installer is available with all CD images and with the
-hd-media installation method. As the graphical installer uses a separate
-(much larger) initrd than the regular installer, it has to be booted using
-<userinput>installgui</userinput> instead of <userinput>install</userinput>.
-Analogous, the expert and rescue modes are booted using
-<userinput>expertgui</userinput> and <userinput>rescuegui</userinput>
-respectively.
+hd-media installation method. To boot the graphical installer simply select
+the relevant option from the boot menu. Expert and rescue mode for the
+graphical installer can be selected from the <quote>Advanced options</quote>
+menu. The previously used boot methods <userinput>installgui</userinput>,
+<userinput>expertgui</userinput> and <userinput>rescuegui</userinput> can
+still be used from the boot prompt which is shown after selecting the
+<quote>Help</quote> option in the boot menu.
 
 </para><para arch="x86">
 
-It is also available as a special <quote>mini</quote> ISO
-image<footnote id="gtk-miniiso">
+There is also a graphical installer image that can be netbooted. And there
+is a special <quote>mini</quote> ISO image<footnote id="gtk-miniiso">
 
 <para>
 The mini ISO image can be downloaded from a Debian mirror as described
@@ -41,9 +42,7 @@ in <xref linkend="downloading-files"/>.
 Look for <filename>netboot/gtk/mini.iso</filename>.
 </para>
 
-</footnote>, which is mainly useful for testing; in this case the image is
-booted just using <userinput>install</userinput>. There is no graphical
-installer image that can be netbooted.
+</footnote>, which is mainly useful for testing.
 
 </para><para arch="powerpc">
 
@@ -65,7 +64,8 @@ Just as with the regular installer it is possible to add boot parameters
 when starting the graphical installer. One of those parameters allows to
 configure the mouse for left-handed use. Others allow to select the mouse
 device (e.g. for a serial mouse) and the mouse protocol.
-See <xref linkend="boot-parms"/> for valid parameters.
+See <xref linkend="boot-parms"/> for valid parameters and
+<xref linkend="boot-screen"/> for information on how to pass them.
 
 </para>
 <note><para>
